[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/Scribbles.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 40.0
margin_top = 24.0
margin_right = 790.0
margin_bottom = 1074.0
rect_min_size = Vector2( 750, 1050 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 750, 1050 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Card" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 361.0
margin_bottom = 1093.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 340.0
margin_bottom = 1355.0
rect_min_size = Vector2( 340, 0 )
custom_constants/separation = 15

[node name="CardName" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 340.0
margin_bottom = 54.0
text = "Card Name"
align = 1

[node name="CardNameEdit" type="LineEdit" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 340.0
margin_bottom = 133.0
text = "Card Name"
max_length = 30

[node name="CardCost" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 340.0
margin_bottom = 202.0
text = "Card Cost"
align = 1

[node name="CardCostEdit" type="SpinBox" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 217.0
margin_right = 340.0
margin_bottom = 281.0
max_value = 9.0
value = 1.0
align = 1

[node name="CardType" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 340.0
margin_bottom = 350.0
text = "Card Type"
align = 1

[node name="CardTypeEdit" type="OptionButton" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 365.0
margin_right = 340.0
margin_bottom = 425.0
text = "Card Type"
align = 1

[node name="CardText" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 340.0
margin_bottom = 494.0
text = "Card Text"
align = 1

[node name="CardTextEdit" type="TextEdit" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 509.0
margin_right = 340.0
margin_bottom = 909.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 3 )
text = "Insert Text here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardAttack" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 924.0
margin_right = 340.0
margin_bottom = 978.0
text = "Card Attack"
align = 1

[node name="CardAttackEdit" type="SpinBox" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 993.0
margin_right = 340.0
margin_bottom = 1057.0
max_value = 20.0
value = 1.0
align = 1

[node name="CardDefense" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 1072.0
margin_right = 340.0
margin_bottom = 1126.0
text = "Card Defense"
align = 1

[node name="CardDefenseEdit" type="SpinBox" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 1141.0
margin_right = 340.0
margin_bottom = 1205.0
max_value = 20.0
value = 2.0
align = 1

[node name="ImageUpload" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 1220.0
margin_right = 340.0
margin_bottom = 1280.0
text = "Upload Image"

[node name="ExportCard" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 1295.0
margin_right = 340.0
margin_bottom = 1355.0
text = "Export Card"

[connection signal="text_changed" from="Panel/ScrollContainer/VBoxContainer/CardNameEdit" to="." method="_on_CardNameEdit_text_changed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/ExportCard" to="." method="_on_ExportCard_pressed"]
